--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "exec-ws",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Convert the path to a relative path for the workspace and execute the command within the workspace.",
   "main": "index.js",
   "bin": {
-    "exec-ws": "./dist/src/index.js"
+    "exec-ws": "./dist/index.js"
   },
   "scripts": {
     "test": "vitest",
