--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exec-ws",
-  "version": "0.9.0",
+  "version": "0.1.0",
   "description": "Convert the path to a relative path for the workspace and execute the command within the workspace.",
   "main": "index.js",
   "bin": {
@@ -27,6 +27,11 @@
   },
   "homepage": "https://github.com/sidera-design/exec-ws#readme",
   "devDependencies": {
-    "@types/node": "^24.0.15"
+    "@types/glob": "^8.1.0",
+    "@types/node": "^24.0.15",
+    "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "glob": "^11.0.3"
   }
 }
