--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "devDependencies": {
     "@types/glob": "^8.1.0",
     "@types/node": "^24.0.15",
+    "@types/shell-quote": "^1.7.5",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "glob": "^11.0.3"
+    "commander": "^14.0.0",
+    "glob": "^11.0.3",
+    "shell-quote": "^1.8.3"
   }
 }
